* add map decoration images.  create a file called decorations.txt in the map directory.  The format is the same as place.txt, with an image name, then list of points where
the image should be drawn (multiple points are fine).  The image name should be the name of a file in the misc image folder (the same folder that has vc.png) (sgb)

* disable territory name drawing for territories listed in map.properties with a property like dont_draw_territory_names=Germany,Japan (sgb)

* allow for map scaling (sgb)

* let ai play in multiplayer games (sgb)

* fix [ 1533252 ] problem clearing out pbem (sgb)

* make the game look better on a mac (sgb)

* better factory images (eleazar)

* lhtr hb rules (not sure if low luck is correct) (sgb)

* lobby server/client (sgb)

* you can kick players out of a game on startup screen (sgb)

* add odds calculator (zengland)

* fix bug [ 1505192 ] air land in conquered territory (sgb)

* allow networked games to be password protected (sgb)

* for mac and linux, save games in home folder (sgb)

* add convoy centers in europe map (iron cross)

* put saved games in users home directory (sgb)

* fix misspelt territory names in revised and lhtr (Jeffrey Henning)

* add lhtr victory citries (sgb)

* super subs defend at 3 in lhtr (sgb)

* make lhtr aa guns not fire in non combat move (sgb)

* pacific and europe map fixes (Opurt, FlyingSpaghettiMonster)

Changes for 0.8.2.1

* fix installer with embedded java to actually use the embedded java (sgb)

* default sound to off (sgb)

* fix nz territory in four if by sea (rod the god)

Changes for 0.8.2

* fix bug where observers joining mid game may ignore some updates (sgb)

* lock game data before switching to history (sgb)

* fix bug where casualty selection would sometimes appear before the battle panel (sgb)

* fix bug where naval bombardment doesnt work for the first player to fight in round 0 (sgb)

* change two if by sea to four if by sea (rod the god)
